chat button fixed with alignment

--- a/src/app/modals/task-message/task-message.component.scss
+++ b/src/app/modals/task-message/task-message.component.scss
@@ -330,8 +330,8 @@
     transition-duration: .15s;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     z-index: -1;
-    left: 2px;
-    top: -15px;
+    left: 3px;
+    top: -10px;
     background: none;
     border-radius: 50%;
     box-sizing: border-box;
@@ -340,6 +340,12 @@
     width: 70px;
     height: 70px;
     transition: all 0.2s ease-in-out;
+}
+
+.plane-icon {
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .send:hover::before,
